# python-office

./: .gitignore  1.doc  1.docx  1.xls  1.xlsx  Dockerfile  EventHandler.py  ISSUES_AUDIT.md  LICENSE  README-CN.md  README-EN.md  README.en.md  README.md  README.txt  __init__.py  allpackages.txt  author.md  clean.sh  main.py  pyproject.toml  requirements.txt  settings.py  setup.cfg  setup.py  test.py  test_compatibility.py  upload.sh
.github/workflows/: python-publish.yml
.qoder/quests/: pdf-to-word-gui-tool.md
.qoder/rules/: commentStyle.md
Aovice/: __init__.py  test.py
Documentation/: docx2pdf.md  pdf-add-water-mark.md
QtAPP/: QtAPP.pro  fillkeyword.cpp  fillkeyword.h  keywordtablewindow.cpp  keywordtablewindow.h  keywordtablewindow.ui  passworddialog.cpp  passworddialog.h  passworddialog.ui  watermarkdialog.cpp  watermarkdialog.h  widget.cpp  widget.h  widget.ui
code/python-office/: setup.py
contributors/: 77x2
contributors/ CNSeniorious000/: pdf.py
contributors/123GitHub0123/: mail_sent.md  mail_sent.py
contributors/CHENJie666666/: eliminate_background.py  mp4_to_gif.py  text_replace.py  video_combine.py
contributors/CNSeniorious000/: __init__.py  ocr.py  pdf.py  readme.md
contributors/CatchDr/: Baidu_Text_transAPI.py  doc2docx.py  docx2doc.py  ppt2pptx.py  pptx2ppt.py  video_time_statistics.py  xls2xlsx.py  xlsx2xls.py
contributors/CoderWanFeng/: txt2pdf.py
contributors/HHTTXX666/: test s pdf
contributors/Thy/: test.py
contributors/bob-afei/: pdf2imgs.py  requirements.txt  test.py
contributors/bulabean/: SEdemo.xlsx  SEdemo_Split_2022-09-08_162027.xlsx  SEdemo_Split_2022-09-08_162113.xlsx  SEdemo_Split_2022-09-09_215031.xlsx  SEdemo_Split_2022-09-09_215121.xlsx  SearchExcel.py  SplitExcel.py  sedemo.xls  sedemo_Split_2022-08-23_203011.xls  sedemo_Split_2022-08-23_203413.xls  sedemo_Split_2022-09-17_154536.xls
contributors/david3832024-coder/: README.md  batch_image_converter.py
contributors/demo/: WordType.py  demo.py
contributors/hasagee/: MergeExcelWorkbooks
contributors/heyi/: About_hy.md
contributors/hs5057/: md_office_demo.py  readme.md
contributors/hxj04121-lab/: test_pdf_add_img_water.py
contributors/jerrybaijy/: test_push.py
contributors/lzl/: WordType.py
contributors/marvel2120/: WordType.py
contributors/rs1973/: process_img1.py  readme.md
contributors/rs1973-bit/: process_img1.py
contributors/sustnf/: file.py  md5_verify.py
contributors/wangpeng/: pinyin_gui.py
contributors/wzllby/: motor_vehicle_invoice_identification.py  utils.py
contributors/yinzeyuan/: Rename-AddSomething.py  SearchSpecifyTypeFile.py  check_local_dir_image_link_markdown.py  markdown_link_image_to_base64.py  output_file_list_to_excel.py  screen_unmarked_image.py
core/: ImageType.py  ToolsType.py  VideoType.py  WordType.py
customizeWindowPyfile/: FinalWidget.py  KeywordTableWindow.py  PasswordDialog.py  ProgressBarDialog.py  WatermarkDialog.py
customizeWindowPyfile/ui2pyFile/: ui_Widget.py  ui_keywordtablewindow.py  ui_passworddialog.py  ui_watermarkDialog.py
customizeWindowUIfile/: fillkeyword.ui  watermarkDialog.ui
demo/: readme.md
demo/PyOfficeRobot/: 001-发一条信息.py  002-发文件.py  003-根据关键词回复.py  004-定时发送.py  005-自定义功能.py  006-独立版本.py  007-收集群消息.py  008-发消息换行.py  009-批量加好友.py  010-定时群发.py  011-chat_chatgpt.py  012、智能聊天.py  @AutomationLog.txt
demo/pdf/: pdf_demo.py
demo/poexcel/: Excel转PDF.py  创建Excel文件.py  合并2个Excel的内容到一个sheet中.py  合并多个Excel到一个Excel的不同sheet中.py  同一个excel里的不同sheet，拆分为不同的excel文件.py  批量模拟数据.py  根据内容，查询Excel.py  (+3 more)
doc/: README.md
docs/: allpackages.txt  python-office 自动化办公.xmind  skills-import-optimization-report.md  tree.txt
documentation/: function-list-001.md  txt2wordcloud.md
examples/: readme.md
exe/: README.md
office/: __init__.py  __main__.py  compatibility.py  docx.py  email.py  excel.py  file.py  image.py  ocr.py  pdf.py  ppt.py  tools.py  video.py  word.py
python-office/: __init__.py  hello-world.py  python-doc.py
script/: allpackages.txt  clean.sh  poetry-test-download.sh  poetry-test-upload.sh  upload.sh
service/: __init__.py
skills/: README.md  __init__.py
tests/: Sheet1.xlsx  Sheet2.xlsx  __init__.py  fake2excel.xlsx  report.html  test_dev.py  test_excel.py  test_file.py  test_main.py  test_markdown.py  test_merge2excel.xlsx  test_pdf.py  test_result.txt  test_ruiming.py  test_tools.py
ttt/: 1908.11415.docx
uicBat文件/: README.txt  uic.bat  uicKeytableWindow.bat  uicPasswordDialoog.bat  uicWatermarkDialog.bat
utils/: progress.py
(+721 files in other folders)
