[metadata]
name = python-office
version = 0.2.17
description = python for office
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CoderWanFeng/python-office
author = CoderWanFeng
author_email = 1957875073@qq.com
license = Apache-2.0 license
license_file = LICENSE
platforms = any

project_urls =
    Bug Tracker = https://github.com/CoderWanFeng/python-office/issues
    Documentation = https://github.com/CoderWanFeng/python-office/blob/master/README.md
    Source Code = https://github.com/CoderWanFeng/python-office

[options]
packages = find:
install_requires =
    rich >= 9.13.0
    you-get
    PyOfficeRobot
    poimage
    poexcel
    pofile
    popdf
    poppt
    wftools
    povideo
    poword

python_requires = >=3.8
include_package_data = True
zip_safe = False
